--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <header class="header">
             <div class="logo">
-                <a  href="./" class="logo__name">АФРОДИТА</a>
+                <a  href="./" class="logo__name">АФРОДИТА22</a>
             </div>
             <ul class="nav">
                 <li class="nav__main">
