--- a/index.html
+++ b/index.html
@@ -9,71 +9,77 @@
 <body>
     <div class="main">
         <header class="header">
-            <div class="logo">
-                <a  href="./" class="logo__name">АФРОДИТА22</a>
-            </div>
-            <ul class="nav">
-                <li class="nav__main">
-                    <img src="./" alt="pin1">
-                    <a href="./">ГЛАВНАЯ</a>
-                </li>
-                <li class="nav__reviews">
-                    <img src="./" alt="pin2">
-                    <a href="./">ОТЗЫВЫ</a>
-                </li>
-                <li class="nav__services">
-                    <img src="./" alt="pin3">
-                    <a href="./">УСЛУГИ</a>
-                </li>
-            </ul>
-            <div class="info">
-                <div class="info__tel">
-                    <a href="tel:+78000039210">8(800) 00-392-10</a>
+            <div class="container">
+                <div class="logo">
+                    <a  href="./" class="logo__name">АФРОДИТА</a>
                 </div>
-                <div class="info__work-time">
-                    <a href="./">График работы</a>
-                </div>
-            </div>
-        </header>
-        <div class="page">
-            <div class="banner">
-                <img src="./" alt="Баннер сайта">
-            </div>
-            <div class="features">
-                <h2 class="features__header">ОСОБЕННОСТИ</h2>
-                <ul class="features__list">
-                    <li class="list__item-1">
-                        <img src="./" alt="pin1">
-                        <h3>УНИКАЛЬНОСТЬ</h3>
-                        <p>Мы делаем все для вашего комфорта</p>>
-                        <ul>
-                            <li><span>Питание включено</span></li>
-                            <li><span>Багаж(5 кг)</span></li>
-                            <li><span>Душ/баня</span></li>
-                        </ul>
+                <ul class="nav">
+                    <li class="nav__main">
+                        <img src="./Header/nav/main.png" width="15px" height="20px" alt="pin1">
+                        <a href="./">ГЛАВНАЯ</a>
                     </li>
-                    <li class="list__item-2">
-                        <img src="./" alt="pin2">
-                        <h3>ПРЕМИУМ-КЛАСС</h3>
-                        <p>Наш зал оборудован тренажерами А-класса</p>
-                        <ul>
-                            <li><span>Качество</span></li>
-                            <li><span>Продуктивность</span></li>
-                            <li><span>Результат</span></li>
-                        </ul>
+                    <li class="nav__reviews">
+                        <img src="./Header/nav/feed.png" width="15px" height="20px" alt="pin2">
+                        <a href="./">ОТЗЫВЫ</a>
                     </li>
-                    <li class="list__item-3">
-                        <img src="./" alt="pin3">
-                        <h3>ЛИЧНЫЙ ТРЕНЕР</h3>
-                        <p>Тренер сделает все для вашего результата</p>
-                        <ul>
-                            <li><span>Программа</span></li>
-                            <li><span>Питание</span></li>
-                            <li><span>План тренировок</span></li>
-                        </ul>
+                    <li class="nav__services">
+                        <img src="./Header/nav/service.png" width="15px" height="20px" alt="pin3">
+                        <a href="./">УСЛУГИ</a>
                     </li>
                 </ul>
+                <div class="info">
+                    <div class="info__tel">
+                        <a href="tel:+78000039210">8(800) 00-392-10</a>
+                    </div>
+                    <div class="info__work-time">
+                        <a href="./">График работы</a>
+                    </div>
+                </div>  
+            </div>                       
+        </header>
+
+        <div class="page">
+            <div class="banner">
+                <img src="./Banner/banner.jpg" alt="Баннер сайта">
             </div>
+            <div class="container__features">
+                <div class="features">
+                    <h2 class="features__header">ОСОБЕННОСТИ</h2>
+                    <ul class="features__list">
+                        <li class="list__item-1">
+                            <img src="./" alt="pin1">
+                            <h3>УНИКАЛЬНОСТЬ</h3>
+                            <p>Мы делаем все для вашего комфорта</p>>
+                            <ul>
+                                <li><span>Питание включено</span></li>
+                                <li><span>Багаж(5 кг)</span></li>
+                                <li><span>Душ/баня</span></li>
+                            </ul>
+                        </li>
+                        <li class="list__item-2">
+                            <img src="./" alt="pin2">
+                            <h3>ПРЕМИУМ-КЛАСС</h3>
+                            <p>Наш зал оборудован тренажерами А-класса</p>
+                            <ul>
+                                <li><span>Качество</span></li>
+                                <li><span>Продуктивность</span></li>
+                                <li><span>Результат</span></li>
+                            </ul>
+                        </li>
+                        <li class="list__item-3">
+                            <img src="./" alt="pin3">
+                            <h3>ЛИЧНЫЙ ТРЕНЕР</h3>
+                            <p>Тренер сделает все для вашего результата</p>
+                            <ul>
+                                <li><span>Программа</span></li>
+                                <li><span>Питание</span></li>
+                                <li><span>План тренировок</span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
             <div class="news">
                 <div class="last__news"></div>
                     <div class="last__news-item">
@@ -135,31 +141,34 @@
                     </div>
                 </div>
             </div>
+        </div>>    
 
         <footer class="footer">
-            <div class="copyright">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </div>
-            <div class="logo">
-                <a href="./" class="logo__name">АФРОДИТА</a>
-            </div>
-            <div class="socials">
-                <div class="socials_title">Наши социальные сети</div>
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
-                    </li>
-                    <li class="social__item">
-                        <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
-                    </li>
-                    <li class="social__item">
-                        <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
-                    </li>
-                    <li class="social__item">
-                        <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
-                    </li>
-                </ul>
-            </div>
+            <div class="container__footer">
+                <div class="copyright">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
+                <div class="logo">
+                    <a href="./" class="logo__name">АФРОДИТА</a>
+                </div>
+                <div class="socials">
+                    <div class="socials_title">Наши социальные сети</div>
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="./" class="socials__list"> <img src="./" alt="social__pin"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>            
         </footer>
     </div>
 </body>
