--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@
             <div class="banner">
                 <img src="./Banner/banner.jpg" alt="Баннер сайта">
             </div>
-            <div class="container__features">
+            <div class="container">
                 <div class="features">
                     <h2 class="features__header">ОСОБЕННОСТИ</h2>
                     <ul class="features__list">
-                        <li class="list__item-1">
-                            <img src="./" alt="pin1">
+                        <li class="features__item-1">
+                            <img src="./features/flower.png" width="28" height="31" alt="pin1">
                             <h3>УНИКАЛЬНОСТЬ</h3>
-                            <p>Мы делаем все для вашего комфорта</p>>
-                            <ul>
+                            <p>Мы делаем все для вашего комфорта</p>
+                            <ul class="list__item-1">
                                 <li><span>Питание включено</span></li>
                                 <li><span>Багаж(5 кг)</span></li>
                                 <li><span>Душ/баня</span></li>
                             </ul>
                         </li>
-                        <li class="list__item-2">
-                            <img src="./" alt="pin2">
+                        <li class="features__item-2">
+                            <img src="./features/mark-as-favorite-star.png" width="28" height="31" alt="pin2">
                             <h3>ПРЕМИУМ-КЛАСС</h3>
                             <p>Наш зал оборудован тренажерами А-класса</p>
-                            <ul>
+                            <ul class="list__item-2">
                                 <li><span>Качество</span></li>
                                 <li><span>Продуктивность</span></li>
                                 <li><span>Результат</span></li>
                             </ul>
                         </li>
-                        <li class="list__item-3">
-                            <img src="./" alt="pin3">
+                        <li class="features__item-3">
+                            <img src="./features/painter-palette.png" width="28" height="31" alt="pin3">
                             <h3>ЛИЧНЫЙ ТРЕНЕР</h3>
                             <p>Тренер сделает все для вашего результата</p>
-                            <ul>
+                            <ul class="list__item-3">
                                 <li><span>Программа</span></li>
                                 <li><span>Питание</span></li>
                                 <li><span>План тренировок</span></li>
